Added python script to convert notebooks in .py scripts. Readersourcing notebook refactored to be faster.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,20 +13,21 @@
     {
      "name": "stdout",
      "text": [
-      "0/6 (0/100%)\n3/6 (50/100%)\n",
-      "6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/info.json\nELAPSED TIME:  0.24900388717651367\n"
+      "3/6 (50/100%)\n6/6 (100/100%)\n6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/info.json\nELAPSED TIME:  0.19799232482910156\n"
      ],
      "output_type": "stream"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import math as m\n",
+    "import linecache\n",
+    "from collections import deque\n",
     "import csv\n",
+    "import numpy as np\n",
     "import os\n",
-    "import time\n",
     "import json\n",
+    "import time\n",
     "\n",
     "np.set_printoptions(formatter={'float': lambda x: \"{0:0.8f}\".format(x)})\n",
     "\n",
@@ -47,6 +48,8 @@
     "paper_authors = paper_authors.values\n",
     "paper_ratings = pd.read_csv(ratings_filename)\n",
     "paper_ratings = paper_ratings.values\n",
+    "\n",
+    "csv_offset = 2\n",
     "\n",
     "# Initial setup\n",
     "\n",
@@ -85,7 +88,7 @@
     "\n",
     "# Function to output result to file\n",
     "\n",
-    "def serialize_result(verbose):\n",
+    "def serialize_result(current_index, verbose):\n",
     "    \n",
     "    result_folder_path = \"../models/{}/\".format(dataset_name)\n",
     "\n",
@@ -100,86 +103,90 @@
     "        {'Quantity': 'Author Score', 'Identifiers': authors.tolist(), 'Values': author_score.tolist()},\n",
     "    ]\n",
     "    \n",
-    "    quantities_filename = \"{}readersourcing/quantities.json\".format(result_folder_path)\n",
+    "    result_quantities_filename = \"{}readersourcing/quantities.json\".format(result_folder_path)\n",
     "    os.makedirs(\"{}readersourcing/\".format(result_folder_path), exist_ok=True)\n",
     "    \n",
     "    if verbose:\n",
-    "        print(\"PRINTING QUANTITIES TO .JSON FILE AT PATH {}\".format(quantities_filename))\n",
+    "        print(\"PRINTING QUANTITIES TO .JSON FILE AT PATH {}\".format(result_quantities_filename))\n",
     "    \n",
-    "    with open(quantities_filename, 'w') as outfile:  \n",
-    "        json.dump(dictionary, outfile)\n",
-    "    outfile.close()\n",
+    "    with open(result_quantities_filename, 'w') as result_quantities_file:  \n",
+    "        json.dump(dictionary, result_quantities_file)\n",
+    "    result_quantities_file.close()\n",
     "        \n",
     "    # Rating and goodness matrix output handling\n",
     "    \n",
     "    rating_matrix = np.zeros((readers_number, papers_number))\n",
     "    goodness_matrix = np.zeros((readers_number, papers_number))\n",
     "    \n",
-    "    for index, entry in enumerate(paper_ratings) :\n",
-    "    \n",
+    "    for rating_index in range(csv_offset, current_index):\n",
+    "                \n",
+    "        current_entry = linecache.getline(ratings_filename, rating_index).split(\",\")\n",
+    "        \n",
     "        # Example: <1,1,2,0.8,0>\n",
     "        # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8\n",
-    "        timestamp = int(entry[0])\n",
-    "        reader = int(entry[1])\n",
-    "        paper = int(entry[2])\n",
-    "        rating = entry[3]\n",
-    "        \n",
-    "        rating_matrix[reader][paper] = rating\n",
-    "        goodness_matrix[reader][paper] = rating_goodness[timestamp]\n",
+    "        # current_timestamp = int(current_entry[0])\n",
+    "        current_reader = int(current_entry[1])\n",
+    "        current_paper = int(current_entry[2])\n",
+    "        current_rating = float(current_entry[3])\n",
+    "            \n",
+    "        rating_matrix[current_reader][current_paper] = current_rating\n",
+    "        goodness_matrix[current_reader][current_paper] = rating_goodness[timestamp]\n",
     "    \n",
-    "    ratings_filename = \"{}readersourcing/ratings.csv\".format(result_folder_path)\n",
+    "    result_ratings_filename = \"{}readersourcing/ratings.csv\".format(result_folder_path)\n",
     "    os.makedirs(\"{}readersourcing/\".format(result_folder_path), exist_ok=True)\n",
     "    \n",
-    "    goodness_filename = \"{}readersourcing/goodness.csv\".format(result_folder_path)\n",
+    "    result_goodness_filename = \"{}readersourcing/goodness.csv\".format(result_folder_path)\n",
     "    os.makedirs(\"{}readersourcing/\".format(result_folder_path), exist_ok=True)\n",
     "    \n",
     "    if verbose:\n",
-    "        print(\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {}\".format(ratings_filename))\n",
+    "        print(\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {}\".format(result_ratings_filename))\n",
     "            \n",
-    "    with open(ratings_filename, mode='w', newline='') as rating_file:\n",
-    "        rating_writer = csv.writer(rating_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "    with open(result_ratings_filename, mode='w', newline='') as result_rating_file:\n",
+    "        rating_writer = csv.writer(result_rating_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "        for rating_entry in rating_matrix:\n",
     "            rating_writer.writerow(rating_entry)\n",
-    "    rating_file.close()\n",
+    "    result_rating_file.close()\n",
     "    \n",
     "    if verbose:\n",
-    "        print(\"PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH {}\".format(goodness_filename))\n",
+    "        print(\"PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH {}\".format(result_goodness_filename))\n",
     "    \n",
-    "    with open(goodness_filename, mode='w', newline='') as goodness_file:\n",
-    "        goodness_writer = csv.writer(goodness_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+    "    with open(result_goodness_filename, mode='w', newline='') as result_goodness_file:\n",
+    "        goodness_writer = csv.writer(result_goodness_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "        for goodness_entry in goodness_matrix:\n",
     "            goodness_writer.writerow(goodness_entry)\n",
-    "    goodness_file.close()\n",
+    "    result_goodness_file.close()\n",
     "    \n",
     "    # Info output handling\n",
     "    \n",
-    "    elapsed_time = time.time() - start_time \n",
+    "    result_elapsed_time = time.time() - start_time \n",
     "    \n",
-    "    info_filename = \"{}readersourcing/info.json\".format(result_folder_path)\n",
+    "    dictionary = [{'Time': result_elapsed_time}]\n",
+    "    \n",
+    "    result_info_filename = \"{}readersourcing/info.json\".format(result_folder_path)\n",
     "    os.makedirs(\"{}readersourcing/\".format(result_folder_path), exist_ok=True)\n",
     "    \n",
-    "    dictionary = [{'Time': elapsed_time}]\n",
-    "    \n",
     "    if verbose:\n",
-    "        print(\"PRINTING INFO TO .JSON FILE AT PATH {}\".format(info_filename))\n",
+    "        print(\"PRINTING INFO TO .JSON FILE AT PATH {}\".format(result_info_filename))\n",
     "        \n",
-    "    with open(info_filename, 'w') as outfile:  \n",
-    "        json.dump(dictionary, outfile)\n",
-    "    outfile.close()\n",
+    "    with open(result_info_filename, 'w') as result_info_file:  \n",
+    "        json.dump(dictionary, result_info_file)\n",
+    "    result_info_file.close()\n",
     "    \n",
-    "    return elapsed_time\n",
+    "    return result_elapsed_time\n",
     "\n",
     "# There are many \"print\" that you can uncomment if you have to do some debugging\n",
     "# print(\"##########\")\n",
     "\n",
-    "for index, entry in enumerate(paper_ratings) :\n",
-    "\n",
+    "for index in range(csv_offset, (ratings_number + csv_offset)):\n",
+    "    \n",
+    "    entry = linecache.getline(ratings_filename, index).split(\",\")\n",
+    "                                                                 \n",
     "    # Example: <1,1,2,0.8,0>\n",
     "    # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8\n",
     "    timestamp = int(entry[0])\n",
     "    reader = int(entry[1])\n",
     "    paper = int(entry[2])\n",
-    "    rating = entry[3]\n",
+    "    rating = float(entry[3])\n",
     "    authors_of_paper = get_author(paper)\n",
     "    \n",
     "    percentage = 100*index/ratings_number\n",
@@ -188,7 +195,7 @@
     "    # print(\"---------- CURRENT ENTRY ----------\")\n",
     "    # print(f\"TIMESTAMP {timestamp} - READER {reader} - PAPER {paper} - SCORE {rating}\")\n",
     "    \n",
-    "    serialize_result(verbose=False)\n",
+    "    serialize_result(index, verbose=False)\n",
     "\n",
     "    # COMPUTATION START: PAPER AND READER SCORE\n",
     "\n",
@@ -236,46 +243,52 @@
     "        author_score[author] = ((old_author_steadiness * old_author_score) + (old_reader_score * rating)) / author_steadiness[author]\n",
     "\n",
     "    # COMPUTATION START: PROPAGATING CHANGES TO PREVIOUS READERS\n",
-    "\n",
-    "    if index > 0: \n",
-    "      \n",
-    "        previous_ratings = paper_ratings[:index]\n",
-    "        previous_paper_ratings = previous_ratings[\n",
-    "           (previous_ratings[:,1]!=float(reader)) &\n",
-    "           (previous_ratings[:,2]==float(paper))\n",
-    "        ]\n",
     "        \n",
-    "        # print(\" ----- PREVIOUS PAPER RATINGS -----\")\n",
+    "    previous_ratings = []        \n",
+    "    with open(ratings_filename) as rating_file:\n",
+    "        raw_previous_ratings = deque([next(rating_file) for x in range(csv_offset, (index + csv_offset))])\n",
+    "        raw_previous_ratings.popleft()\n",
+    "    rating_file.close()\n",
+    "    for raw_previous_rating in raw_previous_ratings:\n",
+    "        previous_rating = np.array(raw_previous_rating.split(\",\"), dtype=np.float16)\n",
+    "        previous_ratings.append(previous_rating)\n",
+    "    previous_ratings = np.array(previous_ratings)\n",
+    "    previous_paper_ratings = previous_ratings[\n",
+    "         (previous_ratings[:,1]!=float(reader)) &\n",
+    "         (previous_ratings[:,2]==float(paper))\n",
+    "    ]            \n",
+    "        \n",
+    "    # print(\" ----- PREVIOUS PAPER RATINGS -----\")\n",
     "\n",
-    "        for previous_index, previous_entry in enumerate(previous_paper_ratings):\n",
-    "            \n",
-    "            # Example: <1,1,2,0.8,0>\n",
-    "            # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8 written by Author 0\n",
-    "            previous_timestamp = int(previous_entry[0])\n",
-    "            previous_reader = int(previous_entry[1])\n",
-    "            previous_paper = int(previous_entry[2])\n",
-    "            previous_rating = previous_entry[3]\n",
+    "    for previous_index, previous_entry in enumerate(previous_paper_ratings):\n",
+    "        \n",
+    "        # Example: <1,1,2,0.8,0>\n",
+    "        # At Timestamp 1 Reader 1 gave to Paper 2 a Rating of 0.8 written by Author 0\n",
+    "        previous_timestamp = int(previous_entry[0])\n",
+    "        previous_reader = int(previous_entry[1])\n",
+    "        previous_paper = int(previous_entry[2])\n",
+    "        previous_rating = previous_entry[3]\n",
     "\n",
-    "            # print(f\"PREVIOUS TIMESTAMP {previous_timestamp} - PREVIOUS READER {previous_reader} - PREVIOUS PAPER {previous_paper} - PREVIOUS RATING {previous_rating}\")\n",
+    "        # print(f\"PREVIOUS TIMESTAMP {previous_timestamp} - PREVIOUS READER {previous_reader} - PREVIOUS PAPER {previous_paper} - PREVIOUS RATING {previous_rating}\")\n",
     "\n",
-    "            # Saving previous values at time t(i)\n",
+    "        # Saving previous values at time t(i)\n",
     "\n",
-    "            old_previous_reader_steadiness = reader_steadiness[previous_reader]\n",
-    "            old_previous_reader_score = reader_score[previous_reader]\n",
-    "            old_previous_rating = previous_rating\n",
-    "            old_previous_rating_goodness = rating_goodness[previous_timestamp]\n",
+    "        old_previous_reader_steadiness = reader_steadiness[previous_reader]\n",
+    "        old_previous_reader_score = reader_score[previous_reader]\n",
+    "        old_previous_rating = previous_rating\n",
+    "        old_previous_rating_goodness = rating_goodness[previous_timestamp]\n",
     "\n",
-    "            # Updating previous values at time t(i+1)\n",
+    "        # Updating previous values at time t(i+1)\n",
     "\n",
-    "            rating_goodness[previous_timestamp] = 1 - (m.sqrt(abs(old_previous_rating - paper_score[paper])))\n",
-    "            reader_steadiness[previous_reader] = (old_previous_reader_steadiness + old_reader_score)\n",
-    "            reader_score[previous_reader] = (\n",
-    "                                                (old_previous_reader_steadiness * old_previous_reader_score) -\n",
-    "                                                (old_paper_steadiness * old_previous_rating_goodness) +\n",
-    "                                                (paper_steadiness[paper] * rating_goodness[previous_timestamp])\n",
-    "                                            ) / reader_steadiness[previous_reader]\n",
+    "        rating_goodness[previous_timestamp] = 1 - (m.sqrt(abs(old_previous_rating - paper_score[paper])))\n",
+    "        reader_steadiness[previous_reader] = (old_previous_reader_steadiness + old_reader_score)\n",
+    "        reader_score[previous_reader] = (\n",
+    "                                            (old_previous_reader_steadiness * old_previous_reader_score) -\n",
+    "                                            (old_paper_steadiness * old_previous_rating_goodness) +\n",
+    "                                            (paper_steadiness[paper] * rating_goodness[previous_timestamp])\n",
+    "                                        ) / reader_steadiness[previous_reader]\n",
     "\n",
-    "        # print(\" ----- PREVIOUS PAPER RATINGS END -----\")\n",
+    "    # print(\" ----- PREVIOUS PAPER RATINGS END -----\")\n",
     "        \n",
     "    # print(\"---------- PRINTING FINAL VALUES AT TIME T(I+1) ----------\")\n",
     "    # print(\"PAPER STEADINESS: \", paper_steadiness)\n",
@@ -285,13 +298,13 @@
     "    # print(\"##########\")\n",
     "\n",
     "print(\"{}/{} (100/100%)\".format(int(ratings_number), int(ratings_number))) \n",
-    "elapsed_time = serialize_result(verbose=True)\n",
+    "elapsed_time = serialize_result(ratings_number, verbose=True)\n",
     "print(\"ELAPSED TIME: \", elapsed_time)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -302,7 +315,7 @@
     {
      "name": "stdout",
      "text": [
-      "PAPER STEADINESS:   [1.00000000 0.54882812]\nPAPER SCORE:        [0.79980469 0.50000000]\nREADER STEADINESS:  [1.00000000 1.00000000 1.54882812 1.54882812 0.00000000 0.00000000]\nREADER SCORE:       [0.98583984 0.22558594 0.50000000 0.99121094 0.00000101 0.00000101]\nAUTHOR STEADINESS:  [1.54882812]\nAUTHOR SCORE:       [0.69384766]\n"
+      "PAPER STEADINESS:   [1.00000000 0.54882812]\nPAPER SCORE:        [0.79980469 0.50000000]\nREADER STEADINESS:  [1.00000000 1.00000000 1.54882812 1.54882812 0.00000000 0.00000000]\nREADER SCORE:       [1.00000000 0.22570801 0.50000000 0.99121094 0.00000101 0.00000101]\nAUTHOR STEADINESS:  [1.54882812]\nAUTHOR SCORE:       [0.69384766]\n"
      ],
      "output_type": "stream"
     }
@@ -310,13 +323,12 @@
    "source": [
     "# Summary\n",
     "\n",
-    "\n",
     "print(\"PAPER STEADINESS:  \", paper_steadiness)\n",
     "print(\"PAPER SCORE:       \", paper_score)\n",
     "print(\"READER STEADINESS: \", reader_steadiness)\n",
     "print(\"READER SCORE:      \", reader_score)\n",
     "print(\"AUTHOR STEADINESS: \", author_steadiness)\n",
-    "print(\"AUTHOR SCORE:      \", author_score)"
+    "print(\"AUTHOR SCORE:      \", author_score)\n"
    ]
   },
   {
