--- a/notebooks/Seeder.ipynb
+++ b/notebooks/Seeder.ipynb
@@ -2,69 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "DATASET NAME:  seed_2\nDATASET FOLDER PATH:  ../data/seed_2/\nINFO FILE PATH:  ../data/seed_2/info.csv\nRATINGS FILE PATH:  ../data/seed_2/ratings.csv\nAUTHORS FILE PATH:  ../data/seed_2/authors.csv\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import seaborn as sb\n",
-    "import numpy as np\n",
-    "import math as m\n",
-    "import os\n",
-    "import csv\n",
-    "import random as rn\n",
-    "from matplotlib import pyplot as plt\n",
-    "import scipy as sp\n",
-    "from scipy.stats import truncnorm as tn\n",
-    "\n",
-    "# Quantities in an year of activity\n",
-    "papers_number = 250\n",
-    "readers_number = 45\n",
-    "authors_number = 5\n",
-    "\n",
-    "papers = np.arange(papers_number)\n",
-    "readers = np.arange(readers_number)\n",
-    "authors = np.arange(authors_number)\n",
-    "\n",
-    "# Seed folder path\n",
-    "\n",
-    "dataset_name = \"seed_2\"\n",
-    "dataset_folder_path = f\"../data/{dataset_name}/\"\n",
-    "info_file_path = f\"{dataset_folder_path}info.csv\"\n",
-    "ratings_file_path = f\"{dataset_folder_path}ratings.csv\"\n",
-    "authors_file_path = f\"{dataset_folder_path}authors.csv\"\n",
-    "\n",
-    "os.makedirs(dataset_folder_path, exist_ok=True)\n",
-    "\n",
-    "print(\"DATASET NAME: \", dataset_name)\n",
-    "print(\"DATASET FOLDER PATH: \", dataset_folder_path)\n",
-    "print(\"INFO FILE PATH: \", info_file_path)\n",
-    "print(\"RATINGS FILE PATH: \", ratings_file_path)\n",
-    "print(\"AUTHORS FILE PATH: \", authors_file_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "---------- PAPER DISTRIBUTIONS GENERATION STARTED ----------\n0/250 (0/100%)\n25/250 (10/100%)\n50/250 (20/100%)\n",
-      "75/250 (30/100%)\n100/250 (40/100%)\n125/250 (50/100%)\n150/250 (60/100%)\n175/250 (70/100%)\n200/250 (80/100%)\n225/250 (90/100%)\n250/250 (100/100%)\n---------- PAPER DISTRIBUTIONS GENERATION COMPLETED ----------\n"
+      "---------- PAPER DISTRIBUTIONS GENERATION STARTED ----------",
+      "\n0/1100 (0/100%)\n110/1100 (10/100%)\n220/1100 (20/100%)\n330/1100 (30/100%)\n440/1100 (40/100%)\n550/1100 (50/100%)\n660/1100 (60/100%)\n770/1100 (70/100%)\n880/1100 (80/100%)\n990/1100 (90/100%)\n1100/1100 (100/100%)\n---------- PAPER DISTRIBUTIONS GENERATION COMPLETED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -96,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- READERS SETS GENERATION STARTED ----------\nSET 0:  [44, 24, 2, 5, 27, 4, 17, 8, 20]\nSET 1:  [11, 38, 23, 15, 6, 25, 37, 34, 7]\nSET 2:  [43, 16, 33, 41, 35, 39, 14, 19, 13]\nSET 3:  [28, 18, 26, 31, 30, 21, 1, 40, 9]\nSET 4:  [32, 29, 42, 3, 22, 36, 0, 10, 12]\n---------- READERS SETS GENERATION COMPLETED ----------\n---------- RATINGS GENERATION STARTED ----------\n0/3222 (0/100%)\n1611/3222 (50/100%)\n3222/3222 (100/100%)\n---------- RATINGS GENERATION ENDED ----------\n"
+      "---------- READERS SETS GENERATION STARTED ----------\nSET 0:  [2, 15, 7, 6]\nSET 1:  [17, 8, 5, 0]\nSET 2:  [16, 4, 12, 11]\nSET 3:  [13, 19, 3, 14]\nSET 4:  [10, 1, 9, 18]\n---------- READERS SETS GENERATION COMPLETED ----------\n---------- RATINGS GENERATION STARTED ----------\n0/6580 (0/100%)\n658/6580 (10/100%)\n1316/6580 (20/100%)\n1974/6580 (30/100%)\n2632/6580 (40/100%)\n3290/6580 (50/100%)\n3948/6580 (60/100%)\n4606/6580 (70/100%)\n5264/6580 (80/100%)\n5922/6580 (90/100%)\n6580/6580 (100/100%)\n---------- RATINGS GENERATION ENDED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -176,14 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- AUTHORS GENERATION STARTED ----------\n",
-      "0/5 (0/100%)\n1/5 (20/100%)\n2/5 (40/100%)\n3/5 (60/100%)\n4/5 (80/100%)\n5/5 (100/100%)\n---------- AUTHORS GENERATION ENDED ----------",
-      "\n"
+      "---------- AUTHORS GENERATION STARTED ----------\n0/25 (0/100%)\n5/25 (20/100%)\n10/25 (40/100%)\n15/25 (60/100%)\n20/25 (80/100%)\n25/25 (100/100%)\n---------- AUTHORS GENERATION ENDED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -224,13 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- INFO GENERATION STARTED ----------\n---------- INFO GENERATION ENDED ----------",
-      "\n"
+      "---------- INFO GENERATION STARTED ----------\n---------- INFO GENERATION ENDED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -296,7 +237,49 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
+    "source": [
+     "%%\n",
+     "import pandas as pd\n",
+     "import seaborn as sb\n",
+     "import numpy as np\n",
+     "import math as m\n",
+     "import os\n",
+     "import csv\n",
+     "import random as rn\n",
+     "from matplotlib import pyplot as plt\n",
+     "import scipy as sp\n",
+     "from scipy.stats import truncnorm as tn\n",
+     "\n",
+     "# Quantities in an year of activity\n",
+     "# papers_number = 15000\n",
+     "# readers_number = 2000\n",
+     "#authors_number = 50\n",
+     "\n",
+     "# Quantities in an year of activity\n",
+     "papers_number = 1100\n",
+     "readers_number = 20\n",
+     "authors_number = 25\n",
+     "\n",
+     "papers = np.arange(papers_number)\n",
+     "readers = np.arange(readers_number)\n",
+     "authors = np.arange(authors_number)\n",
+     "\n",
+     "# Seed folder path\n",
+     "\n",
+     "dataset_name = \"seed_2\"\n",
+     "dataset_folder_path = f\"../data/{dataset_name}/\"\n",
+     "info_file_path = f\"{dataset_folder_path}info.csv\"\n",
+     "ratings_file_path = f\"{dataset_folder_path}ratings.csv\"\n",
+     "authors_file_path = f\"{dataset_folder_path}authors.csv\"\n",
+     "\n",
+     "os.makedirs(dataset_folder_path, exist_ok=True)\n",
+     "\n",
+     "print(\"DATASET NAME: \", dataset_name)\n",
+     "print(\"DATASET FOLDER PATH: \", dataset_folder_path)\n",
+     "print(\"INFO FILE PATH: \", info_file_path)\n",
+     "print(\"RATINGS FILE PATH: \", ratings_file_path)\n",
+     "print(\"AUTHORS FILE PATH: \", authors_file_path)\n"
+    ],
     "metadata": {
      "collapsed": false
     }
