New data computed

--- a/notebooks/TrueReview.ipynb
+++ b/notebooks/TrueReview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -13,7 +13,7 @@
     {
      "name": "stdout",
      "text": [
-      "---------- CURRENT PAPER: 0 ----------\n0/6 (0/100%)\n3/6 (50/100%)\n6/6 (100/100%)\n---------- CURRENT PAPER: 1 ----------\n0/6 (0/100%)\n6/6 (100/100%)\n--------------------\nELAPSED TIME:  0.001001119613647461\n"
+      "0/2 (0/100%)\n1/2 (50/100%)\n2/2 (100/100%)\n--------------------\nELAPSED TIME:  0.000982046127319336\n"
      ],
      "output_type": "stream"
     }
@@ -33,7 +33,7 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"ground_truth_1\"\n",
+    "dataset_name = \"ground_truth_2\"\n",
     "dataset_folder_path = f\"../data/{dataset_name}/\"\n",
     "info_filename = f\"{dataset_folder_path}info.csv\"\n",
     "ratings_filename = f\"{dataset_folder_path}ratings.csv\"\n",
@@ -72,12 +72,16 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "for current_paper in papers:\n",
+    "for index_paper, current_paper in enumerate(papers):\n",
     "\n",
-    "    print(f\"---------- CURRENT PAPER: {current_paper} ----------\")\n",
+    "    # print(f\"---------- CURRENT PAPER: {current_paper} ----------\")\n",
     "\n",
     "    current_paper_ratings = []\n",
     "    ratings_sum = 0\n",
+    "    \n",
+    "    percentage = 100*index_paper/len(papers)\n",
+    "    if percentage % 10 == 0:\n",
+    "        print(f\"{int(index_paper)}/{len(papers)} ({int(percentage)}/100%)\")\n",
     "    \n",
     "    # For each paper, consider only its ratings and throw away the other ones\n",
     "    \n",
@@ -104,9 +108,6 @@
     "        paper = int(entry[2])\n",
     "        rating = entry[3]\n",
     "        \n",
-    "        percentage = 100*index/ratings_number\n",
-    "        if percentage % 10 == 0:\n",
-    "            print(f\"{int(index)}/{ratings_number} ({int(percentage)}/100%)\")\n",
     "        # print(\"---------- CURRENT ENTRY ----------\")\n",
     "        # print(f\"TIMESTAMP {timestamp} - READER {reader} - PAPER {paper} - SCORE {rating}\")\n",
     "    \n",
@@ -154,7 +155,7 @@
     "    \n",
     "    paper_score[current_paper] = ratings_sum / len(current_paper_ratings)\n",
     "    \n",
-    "    print(f\"{int(ratings_number)}/{ratings_number} (100/100%)\")\n",
+    "print(f\"{len(papers)}/{len(papers)} (100/100%)\")\n",
     "    \n",
     "elapsed_time = time.time() - start_time    \n",
     "print(\"--------------------\")\n",
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -176,10 +177,11 @@
     {
      "name": "stdout",
      "text": [
-      "RATING INFORMATIVENESS: ",
-      " [0.00 0.09 0.09 0.00 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.09 0.36 0.00 0.00 0.00]\nRATING BONUS:            [0.00 0.23 0.19 0.00 0.00 0.00]\nREADER BONUS:            [0.00 0.23 0.19 0.00 0.00 0.00]\nPAPER  SCORE:            [0.50 0.50]\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_1/truereview/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/truereview/ratings.csv",
+      "RATING INFORMATIVENESS:  [0.00 0.00 0.01 0.11 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.00 0.01 0.81 0.00 0.00]\nRATING BONUS:            [0.00 0.00 0.02 0.19 0.00 0.00]\nREADER BONUS:            [0.00 0.21 0.00]\nPAPER  SCORE:            [0.54 0.44]\n",
+      "PRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/truereview/ratings.csv",
       "\n",
-      "PRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_1/truereview/info.json\n"
+      "PRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/info.json",
+      "\n"
      ],
      "output_type": "stream"
     }
