--- a/notebooks/Seeder.ipynb
+++ b/notebooks/Seeder.ipynb
@@ -2,13 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- PAPER DISTRIBUTIONS GENERATION STARTED ----------",
-      "\n0/1100 (0/100%)\n110/1100 (10/100%)\n220/1100 (20/100%)\n330/1100 (30/100%)\n440/1100 (40/100%)\n550/1100 (50/100%)\n660/1100 (60/100%)\n770/1100 (70/100%)\n880/1100 (80/100%)\n990/1100 (90/100%)\n1100/1100 (100/100%)\n---------- PAPER DISTRIBUTIONS GENERATION COMPLETED ----------\n"
+      "DATASET NAME:  seed_4\nDATASET FOLDER PATH:  ../data/seed_4/\nINFO FILE PATH:  ../data/seed_4/info.csv\nRATINGS FILE PATH:  ../data/seed_4/ratings.csv\nAUTHORS FILE PATH:  ../data/seed_4/authors.csv\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import seaborn as sb\n",
+    "import numpy as np\n",
+    "import math as m\n",
+    "import os\n",
+    "import csv\n",
+    "import random as rn\n",
+    "from matplotlib import pyplot as plt\n",
+    "import scipy as sp\n",
+    "from scipy.stats import truncnorm as tn\n",
+    "\n",
+    "# Quantities in an year of activity\n",
+    "# papers_number = 15000\n",
+    "# readers_number = 2000\n",
+    "#authors_number = 50\n",
+    "\n",
+    "# Quantities in an year of activity\n",
+    "papers_number = 1100\n",
+    "readers_number = 20\n",
+    "authors_number = 25\n",
+    "\n",
+    "papers = np.arange(papers_number)\n",
+    "readers = np.arange(readers_number)\n",
+    "authors = np.arange(authors_number)\n",
+    "\n",
+    "# Seed folder path\n",
+    "\n",
+    "dataset_name = \"seed_3\"\n",
+    "dataset_folder_path = f\"../data/{dataset_name}/\"\n",
+    "info_file_path = f\"{dataset_folder_path}info.csv\"\n",
+    "ratings_file_path = f\"{dataset_folder_path}ratings.csv\"\n",
+    "authors_file_path = f\"{dataset_folder_path}authors.csv\"\n",
+    "\n",
+    "os.makedirs(dataset_folder_path, exist_ok=True)\n",
+    "\n",
+    "print(\"DATASET NAME: \", dataset_name)\n",
+    "print(\"DATASET FOLDER PATH: \", dataset_folder_path)\n",
+    "print(\"INFO FILE PATH: \", info_file_path)\n",
+    "print(\"RATINGS FILE PATH: \", ratings_file_path)\n",
+    "print(\"AUTHORS FILE PATH: \", authors_file_path)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "---------- PAPER DISTRIBUTIONS GENERATION STARTED ----------\n0/1100 (0/100%)\n110/1100 (10/100%)\n220/1100 (20/100%)\n330/1100 (30/100%)\n440/1100 (40/100%)\n550/1100 (50/100%)\n660/1100 (60/100%)\n770/1100 (70/100%)\n",
+      "880/1100 (80/100%)\n990/1100 (90/100%)\n1100/1100 (100/100%)\n---------- PAPER DISTRIBUTIONS GENERATION COMPLETED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -40,12 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- READERS SETS GENERATION STARTED ----------\nSET 0:  [2, 15, 7, 6]\nSET 1:  [17, 8, 5, 0]\nSET 2:  [16, 4, 12, 11]\nSET 3:  [13, 19, 3, 14]\nSET 4:  [10, 1, 9, 18]\n---------- READERS SETS GENERATION COMPLETED ----------\n---------- RATINGS GENERATION STARTED ----------\n0/6580 (0/100%)\n658/6580 (10/100%)\n1316/6580 (20/100%)\n1974/6580 (30/100%)\n2632/6580 (40/100%)\n3290/6580 (50/100%)\n3948/6580 (60/100%)\n4606/6580 (70/100%)\n5264/6580 (80/100%)\n5922/6580 (90/100%)\n6580/6580 (100/100%)\n---------- RATINGS GENERATION ENDED ----------\n"
+      "---------- READERS SETS GENERATION STARTED ----------\nSET 0:  [1, 3, 18, 9]\nSET 1:  [11, 19, 12, 15]\nSET 2:  [10, 5, 0, 8]\nSET 3:  [16, 17, 2, 7]\nSET 4:  [14, 4, 6, 13]\n---------- READERS SETS GENERATION COMPLETED ----------\n---------- RATINGS GENERATION STARTED ----------\n0/896 (0/100%)\n448/896 (50/100%)\n896/896 (100/100%)\n---------- RATINGS GENERATION ENDED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -120,12 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- AUTHORS GENERATION STARTED ----------\n0/25 (0/100%)\n5/25 (20/100%)\n10/25 (40/100%)\n15/25 (60/100%)\n20/25 (80/100%)\n25/25 (100/100%)\n---------- AUTHORS GENERATION ENDED ----------\n"
+      "---------- AUTHORS GENERATION STARTED ----------",
+      "\n0/25 (0/100%)",
+      "\n5/25 (20/100%)\n10/25 (40/100%)\n15/25 (60/100%)\n20/25 (80/100%)\n25/25 (100/100%)\n",
+      "---------- AUTHORS GENERATION ENDED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -166,12 +232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- INFO GENERATION STARTED ----------\n---------- INFO GENERATION ENDED ----------\n"
+      "---------- INFO GENERATION STARTED ----------",
+      "\n---------- INFO GENERATION ENDED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -237,49 +304,7 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [
-     "%%\n",
-     "import pandas as pd\n",
-     "import seaborn as sb\n",
-     "import numpy as np\n",
-     "import math as m\n",
-     "import os\n",
-     "import csv\n",
-     "import random as rn\n",
-     "from matplotlib import pyplot as plt\n",
-     "import scipy as sp\n",
-     "from scipy.stats import truncnorm as tn\n",
-     "\n",
-     "# Quantities in an year of activity\n",
-     "# papers_number = 15000\n",
-     "# readers_number = 2000\n",
-     "#authors_number = 50\n",
-     "\n",
-     "# Quantities in an year of activity\n",
-     "papers_number = 1100\n",
-     "readers_number = 20\n",
-     "authors_number = 25\n",
-     "\n",
-     "papers = np.arange(papers_number)\n",
-     "readers = np.arange(readers_number)\n",
-     "authors = np.arange(authors_number)\n",
-     "\n",
-     "# Seed folder path\n",
-     "\n",
-     "dataset_name = \"seed_2\"\n",
-     "dataset_folder_path = f\"../data/{dataset_name}/\"\n",
-     "info_file_path = f\"{dataset_folder_path}info.csv\"\n",
-     "ratings_file_path = f\"{dataset_folder_path}ratings.csv\"\n",
-     "authors_file_path = f\"{dataset_folder_path}authors.csv\"\n",
-     "\n",
-     "os.makedirs(dataset_folder_path, exist_ok=True)\n",
-     "\n",
-     "print(\"DATASET NAME: \", dataset_name)\n",
-     "print(\"DATASET FOLDER PATH: \", dataset_folder_path)\n",
-     "print(\"INFO FILE PATH: \", info_file_path)\n",
-     "print(\"RATINGS FILE PATH: \", ratings_file_path)\n",
-     "print(\"AUTHORS FILE PATH: \", authors_file_path)\n"
-    ],
+    "source": [],
     "metadata": {
      "collapsed": false
     }
