--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,9 +13,9 @@
     {
      "name": "stdout",
      "text": [
-      "0/0 (0/100%)\n3/6 (50/100%)",
-      "\n6/6 (100/100%)\n6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/ratings.csv",
-      "\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/info.json\nELAPSED TIME:  0.3980066776275635\n"
+      "0/0 (0/100%)\n",
+      "3/6 (50/100%)\n6/6 (100/100%)\n",
+      "6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_1/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_1/readersourcing/info.json\nELAPSED TIME:  0.4808948040008545\n"
      ],
      "output_type": "stream"
     }
@@ -39,7 +39,7 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"ground_truth_2\"\n",
+    "dataset_name = \"ground_truth_1\"\n",
     "dataset_folder_path = \"../data/{}/\".format(dataset_name)\n",
     "info_filename = \"{}info.csv\".format(dataset_folder_path)\n",
     "ratings_filename = \"{}ratings.csv\".format(dataset_folder_path)\n",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -316,7 +316,7 @@
     {
      "name": "stdout",
      "text": [
-      "PAPER STEADINESS:   [0.00000300 2.76905989]\nPAPER SCORE:        [0.53666667 0.47419408]\nREADER STEADINESS:  [2.76906289 2.76906289 2.76906289]\nREADER SCORE:       [0.66223303 0.32473638 0.33352161]\nAUTHOR STEADINESS:  [2.76906289 2.76906289]\nAUTHOR SCORE:       [0.47419414 0.47419414]\n"
+      "PAPER STEADINESS:   [1.00000300 0.55278740]\nPAPER SCORE:        [0.79999880 0.50000000]\nREADER STEADINESS:  [1.00000300 1.00000300 1.55279040 1.55279040 0.00000000 0.00000000]\nREADER SCORE:       [0.98606757 0.22537259 0.50113696 0.99929453 0.00000100 0.00000100]\nAUTHOR STEADINESS:  [1.55279040]\nAUTHOR SCORE:       [0.69320038]\n"
      ],
      "output_type": "stream"
     }
