Seeder notebook fixed. Datasets updated.

--- a/notebooks/TrueReview.ipynb
+++ b/notebooks/TrueReview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -13,7 +13,7 @@
     {
      "name": "stdout",
      "text": [
-      "0/2 (0/100%)\n1/2 (50/100%)\n2/2 (100/100%)\n--------------------\nELAPSED TIME:  0.000982046127319336\n"
+      "0/2 (0/100%)\n1/2 (50/100%)\n2/2 (100/100%)\n--------------------\nELAPSED TIME:  0.0010063648223876953\n"
      ],
      "output_type": "stream"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -177,11 +177,7 @@
     {
      "name": "stdout",
      "text": [
-      "RATING INFORMATIVENESS:  [0.00 0.00 0.01 0.11 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.00 0.01 0.81 0.00 0.00]\nRATING BONUS:            [0.00 0.00 0.02 0.19 0.00 0.00]\nREADER BONUS:            [0.00 0.21 0.00]\nPAPER  SCORE:            [0.54 0.44]\n",
-      "PRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/truereview/ratings.csv",
-      "\n",
-      "PRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/info.json",
-      "\n"
+      "RATING INFORMATIVENESS:  [0.00 0.00 0.01 0.11 0.00 0.00]\nRATING ACCURACY LOSS:    [0.00 0.00 0.01 0.81 0.00 0.00]\nRATING BONUS:            [0.00 0.00 0.02 0.19 0.00 0.00]\nREADER BONUS:            [0.00 0.21 0.00]\nPAPER  SCORE:            [0.54 0.44]\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/truereview/ratings.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/truereview/info.json\n"
      ],
      "output_type": "stream"
     }
