Datasets and scripts updated

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,11 +13,20 @@
     {
      "name": "stdout",
      "text": [
-      "0/0 (0/100%)\nTIMESTAMP 0 - READER 0 - PAPER 0 - SCORE 0.51\n3/6 (50/100%)\nTIMESTAMP 1 - READER 0 - PAPER 1 - SCORE 0.36\n",
-      "TIMESTAMP 2 - READER 1 - PAPER 0 - SCORE 0.51\nTIMESTAMP 3 - READER 1 - PAPER 1 - SCORE 0.93\n6/6 (100/100%)\nTIMESTAMP 4 - READER 2 - PAPER 0 - SCORE 0.59\nTIMESTAMP 5 - READER 2 - PAPER 1 - SCORE 0.03\n",
-      "6/6 (100/100%)\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/ground_truth_2/readersourcing/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/ground_truth_2/readersourcing/info.json\nELAPSED TIME:  0.4449887275695801\n"
+      "0/0 (0/100%)\n"
      ],
      "output_type": "stream"
+    },
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-2524d499a737>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    253\u001b[0m         \u001b[1;31m# Saving previous values at time t(i)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    254\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 255\u001b[1;33m         \u001b[0mold_previous_reader_steadiness\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreader_steadiness\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprevious_reader\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    256\u001b[0m         \u001b[0mold_previous_reader_score\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreader_score\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprevious_reader\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    257\u001b[0m         \u001b[0mold_previous_rating\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprevious_rating\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 5000 is out of bounds for axis 0 with size 5000"
+     ],
+     "ename": "IndexError",
+     "evalue": "index 5000 is out of bounds for axis 0 with size 5000",
+     "output_type": "error"
     }
    ],
    "source": [
@@ -39,7 +48,7 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"ground_truth_2\"\n",
+    "dataset_name = \"seed_2/r_4\"\n",
     "dataset_folder_path = \"../data/{}/\".format(dataset_name)\n",
     "info_filename = \"{}info.csv\".format(dataset_folder_path)\n",
     "ratings_filename = \"{}ratings.csv\".format(dataset_folder_path)\n",
@@ -194,9 +203,10 @@
     "    if percentage % 2 == 0:\n",
     "        print(\"{}/{} ({}/100%)\".format(int(index), ratings_number, int(percentage)))\n",
     "    # print(\"---------- CURRENT ENTRY ----------\")\n",
-    "    print(f\"TIMESTAMP {timestamp} - READER {reader} - PAPER {paper} - SCORE {rating}\")\n",
+    "    # print(f\"TIMESTAMP {timestamp} - READER {reader} - PAPER {paper} - SCORE {rating}\")\n",
     "    \n",
-    "    serialize_result(index, verbose=False)\n",
+    "    if percentage % 10 == 0:\n",
+    "        serialize_result(index, verbose=False)\n",
     "\n",
     "    # COMPUTATION START: PAPER AND READER SCORE\n",
     "\n",
@@ -305,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -316,7 +326,7 @@
     {
      "name": "stdout",
      "text": [
-      "PAPER STEADINESS:   [0.00000300 2.76905989]\nPAPER SCORE:        [0.53666667 0.47419408]\nREADER STEADINESS:  [2.76906289 2.76906289 2.76906289]\nREADER SCORE:       [0.66223303 0.32473638 0.33352161]\nAUTHOR STEADINESS:  [2.76906289 2.76906289]\nAUTHOR SCORE:       [0.47419414 0.47419414]\n"
+      "PAPER STEADINESS:   [1.00000300 0.55278740]\nPAPER SCORE:        [0.79999880 0.50000000]\nREADER STEADINESS:  [1.00000300 1.00000300 1.55279040 1.55279040 0.00000000 0.00000000]\nREADER SCORE:       [0.98606757 0.22537259 0.50113696 0.99929453 0.00000100 0.00000100]\nAUTHOR STEADINESS:  [1.55279040]\nAUTHOR SCORE:       [0.69320038]\n"
      ],
      "output_type": "stream"
     }
