--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,31 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "is_executing": false
+     "is_executing": true
     }
    },
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "0/0 (0/100%)\n"
+      "0/0 (0/100%)\n",
+      "2680/134000 (2/100%)\n",
+      "5360/134000 (4/100%)\n"
      ],
      "output_type": "stream"
     },
     {
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-2524d499a737>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    253\u001b[0m         \u001b[1;31m# Saving previous values at time t(i)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    254\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 255\u001b[1;33m         \u001b[0mold_previous_reader_steadiness\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreader_steadiness\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprevious_reader\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    256\u001b[0m         \u001b[0mold_previous_reader_score\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreader_score\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprevious_reader\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    257\u001b[0m         \u001b[0mold_previous_rating\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprevious_rating\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 5000 is out of bounds for axis 0 with size 5000"
+     "name": "stderr",
+     "text": [
+      "C:\\Ambienti\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:234: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\nC:\\Ambienti\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:235: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n"
      ],
-     "ename": "IndexError",
-     "evalue": "index 5000 is out of bounds for axis 0 with size 5000",
-     "output_type": "error"
+     "output_type": "stream"
     }
    ],
    "source": [
@@ -39,8 +37,6 @@
     "import os\n",
     "import json\n",
     "import time\n",
-    "\n",
-    "np.set_printoptions(formatter={'float': lambda x: \"{0:0.8f}\".format(x)})\n",
     "\n",
     "# Reader score must be set to a very small value otherwise there will be a division by 0\n",
     "\n",
@@ -254,6 +250,7 @@
     "        author_score[author] = ((old_author_steadiness * old_author_score) + (old_reader_score * rating)) / author_steadiness[author]\n",
     "\n",
     "    # COMPUTATION START: PROPAGATING CHANGES TO PREVIOUS READERS\n",
+    "    # COMPUTATION START: PROPAGATING CHANGES TO PREVIOUS READERS\n",
     "        \n",
     "    previous_ratings = []        \n",
     "    with open(ratings_filename) as rating_file:\n",
@@ -261,7 +258,7 @@
     "        raw_previous_ratings.popleft()\n",
     "    rating_file.close()\n",
     "    for raw_previous_rating in raw_previous_ratings:\n",
-    "        previous_rating = np.array(raw_previous_rating.split(\",\"), dtype=np.float16)\n",
+    "        previous_rating = np.array(raw_previous_rating.split(\",\"))\n",
     "        previous_ratings.append(previous_rating)\n",
     "    previous_ratings = np.array(previous_ratings)\n",
     "    previous_paper_ratings = previous_ratings[\n",
@@ -279,6 +276,11 @@
     "        previous_reader = int(previous_entry[1])\n",
     "        previous_paper = int(previous_entry[2])\n",
     "        previous_rating = previous_entry[3]\n",
+    "                \n",
+    "        if previous_timestamp == 799:\n",
+    "            print(previous_entry)\n",
+    "            print(paper_ratings.head(800))\n",
+    "            print(previous_reader)\n",
     "\n",
     "        # print(f\"PREVIOUS TIMESTAMP {previous_timestamp} - PREVIOUS READER {previous_reader} - PREVIOUS PAPER {previous_paper} - PREVIOUS RATING {previous_rating}\")\n",
     "\n",
@@ -315,22 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": false,
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "PAPER STEADINESS:   [1.00000300 0.55278740]\nPAPER SCORE:        [0.79999880 0.50000000]\nREADER STEADINESS:  [1.00000300 1.00000300 1.55279040 1.55279040 0.00000000 0.00000000]\nREADER SCORE:       [0.98606757 0.22537259 0.50113696 0.99929453 0.00000100 0.00000100]\nAUTHOR STEADINESS:  [1.55279040]\nAUTHOR SCORE:       [0.69320038]\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Summary\n",
     "\n",
