--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -139,16 +139,13 @@
     "    if verbose:\n",
     "        print(\"PRINTING RATING MATRIX TO .CSV FILE AT PATH {}\".format(result_ratings_filename))\n",
     "            \n",
-    "    paper_ratings_out = pd.read_csv(ratings_filename)\n",
-    "    matrix = paper_ratings_out.pivot_table(index=\"Reader\", columns=\"Paper\", values=\"Score\")\n",
-    "    matrix.fillna(0, inplace=True)\n",
-    "    matrix.to_csv(result_ratings_filename, sep=\",\", header=False, index=False)\n",
+    "    paper_ratings_dataframe = pd.read_csv(ratings_filename)\n",
+    "    ratings_matrix = paper_ratings_dataframe.pivot_table(index=\"Reader\", columns=\"Paper\", values=\"Score\")\n",
+    "    ratings_matrix.fillna(0, inplace=True)\n",
+    "    ratings_matrix.to_csv(result_ratings_filename, sep=\",\", header=False, index=False)\n",
     "        \n",
     "    if verbose:\n",
     "        print(\"PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH {}\".format(result_goodness_filename))\n",
-    "    \n",
-    "    #res = [item for sublist in rating_goodness for item in sublist]\n",
-    "    #print(collections.Counter(res))\n",
     "    \n",
     "    with open(result_goodness_filename, mode='w', newline='') as result_goodness_file:\n",
     "        goodness_writer = csv.writer(result_goodness_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
