Notebooks and scripts updated

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"seed_2/small\"\n",
+    "dataset_name = \"seed_2/p_4_beta_big\"\n",
     "dataset_folder_path = \"../data/{}/\".format(dataset_name)\n",
     "info_filename = \"{}info.csv\".format(dataset_folder_path)\n",
     "ratings_filename = \"{}ratings.csv\".format(dataset_folder_path)\n",
@@ -130,7 +130,7 @@
     "papers_number = info[\"Paper\"][0]\n",
     "readers_number = info[\"Reader\"][0]\n",
     "ratings_number = info[\"Rating\"][0]\n",
-    "ratings_number_per_day = int(ratings_number / 30)\n",
+    "ratings_number_per_day = int(ratings_number / 180)\n",
     "authors_number = info[\"Author\"][0]\n",
     "papers = np.arange(papers_number)\n",
     "readers = np.arange(readers_number)\n",
